rfctools-common (0.5.2) distribution(s); urgency=low

	* Distribute the old rfc 2629 dtd and ent files so that v2 files parse correctly
	* Correct processing so that we can play games with where to search file files.
	  If the file does not exist and the source directory is given then strip the
	  path so that we will search in different directories for the file.

-- Jim Schaad <ietf@augustcellars.com>  Fri 30 MAR 2018 12:00:00 -0700


rfctools-common (0.5.1) distribution(s); urgency=low

	* Setup to publish to PyPI

-- Jim Schaad <ietf@augustcellars.com>  Sun XX MAR 2018 19:00:00 -0800

rfctools-common (0.5.0) distribution(s); urgency=urgency

	* Setup log routines so that UTF-8 strings can be written on
	  all consoles.  This is a problem as Python v2 thinks consoles
	  are written assumed to be ASCII and for Windows it is the code
	  page of the console.  Pipes have a third method of making this decision
	* Swap the order of two attributes to match the order in the
	  xmlrfc v2 to v3 upgrade program.

-- Jim Schaad <ietf@augustcellars.com>  Sun 25 Feb 2018 19:00:00 -0800

rfctools-common (0.0.3) distribution(s); urgency=urgency

	* For python 3.x read file as binary not text, deals with UTF-8 problems
	* Include RFC2629 DTD for the XMLDIFF so that we can load old xml files

-- Jim Schaad <ietf@augustcellars.com>  Sun 11 Feb 2018 19:00:00 -0800

rfctools-common (0.0.2) distribution(s); urgency=urgency

	* Add additional parameter to logging functions
	* Correct README.rst file, should be able to be released publicly

-- Jim Schaad <ietf@augustcellars.com>  Fri 26 Jan 2018 09:00:00 -0800

rfctools-common (0.0.1) distribution(s); urgency=urgency

	* Create the initial simple version
	* Create python setup program

-- Jim Schaad <ietf@augustcellars.com>  Fri 05 Jan 2018 12:00:00 -0800