@@ -1,0 +1,5 @@
+<?xml version='1.0' encoding='utf-8'?>
+
+<rfc xmlns:xi="http://www.w3.org/2001/XInclude">
+  <?rfc include='good.xml' ?>
+</rfc>
